force-app/main/default/objects/ERA_Generation__c/ERA_Generation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ERA Generation</label>
</CustomObject>