force-app/main/default/objects/ERA_Generation__c/fields/Adding_Discount_Allocating_Discount__c.field-meta.xml
<CustomField>
    <fullName>Adding_Discount_Allocating_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We should be able to select whether Adding Discount and Allocating Discount radio button should be visible to the user on Private Payment.</description>
    <label>Adding Discount/Allocating Discount</label>
    <type>Checkbox</type>
</CustomField>