force-app/main/default/objects/ERA_Generation__c/fields/Discount_Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Discount_Coupon_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Coupon Code</label>
    <type>Checkbox</type>
</CustomField>