force-app/main/default/objects/ERA_Generation__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Type</label>
    <type>Checkbox</type>
</CustomField>