force-app/main/default/objects/ERA_Generation__c/fields/Expected_Receivable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Receivable_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expected Receivable Amount</label>
    <type>Checkbox</type>
</CustomField>