force-app/main/default/objects/ERA_Generation__c/fields/Insurance_Payments__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify whether the system is configured to use for Insurance payments or not.</description>
    <label>Insurance Payments</label>
    <type>Checkbox</type>
</CustomField>