force-app/main/default/objects/ERA_Generation__c/fields/Manual_ERA_Posting_Opted__c.field-meta.xml
<CustomField>
    <fullName>Manual_ERA_Posting_Opted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then the User will be able to manually post the ERAs</description>
    <label>Manual ERA Posting Opted?</label>
    <type>Checkbox</type>
</CustomField>