force-app/main/default/objects/ERA_Generation__c/fields/Other_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Other_Discounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Discounts</label>
    <type>Checkbox</type>
</CustomField>