force-app/main/default/objects/ERA_Generation__c/fields/Payment_Schedule_for_Private_Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_for_Private_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We should be able to select whether Payment schedule radio button should be visible to the user on Private Payment.</description>
    <label>Payment Schedule for Private Payment</label>
    <type>Checkbox</type>
</CustomField>