force-app/main/default/objects/ERA_Generation__c/fields/Private_Payments__c.field-meta.xml
<CustomField>
    <fullName>Private_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify whether the system is configured to use for private payments or not.</description>
    <label>Private Payments</label>
    <type>Checkbox</type>
</CustomField>